<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/textView_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_vocabulary_title" />

    <EditText
        android:id="@+id/editText_vocabulary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/dialog_vocabulary_hint" />

    <EditText
        android:id="@+id/editText_translation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/dialog_translation_hint" />

    <EditText
        android:id="@+id/editText_example"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/dialog_example_hint" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp">

        <TextView
            android:id="@+id/textView_archive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_archive"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/textView_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_toRightOf="@+id/textView_archive"
            android:text="@string/dialog_delete"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/textView_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/textView_ok"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp" />

        <TextView
            android:id="@+id/textView_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/dialog_ok"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp" />
    </RelativeLayout>
</LinearLayout>